// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Text component aligned 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: right;
  color: #262D33;
}

<div
  className="c0"
>
  Hello
</div>
`;

exports[`A Text component resized 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 3.25rem;
  line-height: 3.75rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<div
  className="c0"
  size="d2"
>
  Hello
</div>
`;

exports[`A Text component transformed 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: uppercase;
  text-align: left;
  color: #262D33;
}

<div
  className="c0"
>
  Hello
</div>
`;

exports[`A Text component tuncated 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #262D33;
}

<div
  className="c0"
>
  Hello
</div>
`;

exports[`A Text component weight 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 700;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<div
  className="c0"
>
  Hello
</div>
`;

exports[`A Text component with variant 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #CC1F36;
}

<div
  className="c0"
>
  Hello
</div>
`;

exports[`A default Text component 1`] = `
.c0 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  text-transform: none;
  text-align: left;
  color: #262D33;
}

<div
  className="c0"
>
  Hello
</div>
`;
